--- a/GY/GY.csproj
+++ b/GY/GY.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\UserInfo\Login.cshtml" />
     <Content Include="Views\UserInfo\Register.cshtml" />
     <Content Include="Views\Index\Index.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -288,7 +289,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Movies\" />
     <Folder Include="Views\News\" />
   </ItemGroup>
   <ItemGroup>
